--- a/device-guide-qa.html
+++ b/device-guide-qa.html
@@ -3,47 +3,15 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="img/contcont.png" type="image/svg+xml">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PetLife - Q&A・お悩み相談</title>
+    <title>Q&A - PlayEdge</title>
+    <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
     <style>
-        :root {
-            --primary-color: #10b981;
-            --secondary-color: #f59e0b;
-            --accent-color: #fb923c;
-            --brown-color: #78350f;
-        }
-
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #fef3c7;
-        }
-
-        .navbar {
-            background-color: white;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        }
-
-        .navbar-brand {
-            font-weight: bold;
-            color: var(--primary-color) !important;
-            font-size: 1.5rem;
-        }
-
-        .nav-link {
-            color: var(--brown-color) !important;
-            font-weight: 500;
-            margin: 0 10px;
-        }
-
-        .nav-link:hover,
-        .nav-link.active {
-            color: var(--primary-color) !important;
-        }
-
         .page-header {
-            background: linear-gradient(135deg, #dcfce7 0%, #fed7aa 100%);
+            background: linear-gradient(135deg, #e1dcfc 0%, #aabcfe 100%);
             padding: 60px 0;
             border-radius: 0 0 50px 50px;
             margin-bottom: 40px;
@@ -123,7 +91,7 @@
         }
 
         .accordion-button:not(.collapsed) {
-            background: linear-gradient(135deg, #dcfce7, #fed7aa);
+            background: linear-gradient(135deg, #e1dcfc, #aabcfe);
             color: var(--brown-color);
             box-shadow: none;
         }
@@ -275,26 +243,34 @@
 <body>
     <nav class="navbar navbar-expand-lg sticky-top">
         <div class="container">
-            <a class="navbar-brand" href="#">
-                <i class="bi bi-heart-fill text-danger"></i> PetLife
+            <a class="navbar-brand" href="index.html">
+                <i class="bi bi-controller"></i> PlayEdge
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#">ホーム</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">ペット図鑑</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">飼い方ガイド</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="#">Q&A</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">飼育記録</a></li>
+                <ul class="navbar-nav ms-auto align-items-center">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="device-guide-list.html">Devices</a></li>
+                    <li class="nav-item"><a class="nav-link" href="device-guide.html">Guide</a></li>
+                    <li class="nav-item"><a class="nav-link" href="device-guide-qa.html">Support</a></li>
+                    <li class="nav-item"><a class="nav-link" href="device-guide-record.html">Records</a></li>
+                    <li class="nav-item ms-lg-4">
+                        <a class="nav-link btn-login-cool" href="login.html">
+                            <i class="bi bi-person"></i> LOGIN
+                        </a>
+                    </li>
+                    <li class="nav-item ms-lg-2">
+                        <a class="nav-link btn-post-cool" href="device-guide-form.html">
+                            POST
+                        </a>
+                    </li>
                 </ul>
-                <button class="btn btn-outline-success ms-3 rounded-pill fw-bold">
-                    <i class="bi bi-person-circle"></i> ログイン
-                </button>
             </div>
         </div>
     </nav>
+
 
     <div class="page-header">
         <div class="container">
@@ -303,22 +279,22 @@
                     <i class="bi bi-chat-dots-fill"></i> Q&A・お悩み相談
                 </h1>
                 <p class="lead" style="color: var(--brown-color);">
-                    ペットに関する疑問や悩みを解決しましょう
+                    デバイスに関する疑問や悩みを解決しましょう
                 </p>
             </div>
 
             <div class="search-box">
                 <div class="d-flex align-items-center">
-                    <input type="text" class="flex-grow-1" placeholder="質問を検索...（例：犬のしつけ、猫の健康）">
+                    <input type="text" class="flex-grow-1" placeholder="質問を検索...（例：キーボード、マウスの掃除）">
                     <button type="button"><i class="bi bi-search"></i> 検索</button>
                 </div>
             </div>
 
             <div class="text-center mt-4">
                 <div class="d-flex justify-content-center gap-3 flex-wrap">
-                    <span class="stats-badge"><i class="bi bi-chat-left-text"></i> 3,245件の質問</span>
-                    <span class="stats-badge"><i class="bi bi-people"></i> 12,890人の回答者</span>
-                    <span class="stats-badge"><i class="bi bi-check-circle"></i> 解決率 94%</span>
+                    <span class="stats-badge"><i class="bi bi-chat-left-text"></i> 43,245件の質問</span>
+                    <span class="stats-badge"><i class="bi bi-people"></i> 12,8110人の回答者</span>
+                    <span class="stats-badge"><i class="bi bi-check-circle"></i> 解決率 89%</span>
                 </div>
             </div>
         </div>
@@ -338,19 +314,19 @@
                         <li class="nav-item" role="presentation">
                             <button class="nav-link" data-bs-toggle="pill" data-bs-target="#dog" type="button"
                                 role="tab">
-                                <i class="bi bi-emoji-smile"></i> 犬
+                                <i class="bi bi-mouse3"></i> マウス
                             </button>
                         </li>
                         <li class="nav-item" role="presentation">
                             <button class="nav-link" data-bs-toggle="pill" data-bs-target="#cat" type="button"
                                 role="tab">
-                                <i class="bi bi-emoji-heart-eyes"></i> 猫
+                                <i class="bi bi-keyboard"></i> キーボード
                             </button>
                         </li>
                         <li class="nav-item" role="presentation">
                             <button class="nav-link" data-bs-toggle="pill" data-bs-target="#health" type="button"
                                 role="tab">
-                                <i class="bi bi-heart-pulse"></i> 健康
+                                <i class="bi bi-grid"></i> その他
                             </button>
                         </li>
                     </ul>
@@ -364,27 +340,27 @@
                                     <button class="accordion-button" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#faq1">
                                         <i class="bi bi-question-circle-fill text-primary me-2"></i>
-                                        子犬のトイレトレーニングがうまくいきません
+                                        Pキーが反応しません(´；ω；`)
                                     </button>
                                 </h2>
                                 <div id="faq1" class="accordion-collapse collapse show" data-bs-parent="#faqAccordion">
                                     <div class="accordion-body">
                                         <div class="mb-3">
-                                            <span class="badge-category">犬</span>
-                                            <span class="badge-category" style="background: #8b5cf6;">しつけ</span>
+                                            <span class="badge-category">キーボード</span>
+                                            <span class="badge-category" style="background: #8b5cf6;">メンテナンス</span>
                                         </div>
                                         <div class="answer-highlight">
                                             <h6 class="fw-bold text-success mb-2">
                                                 <i class="bi bi-check-circle-fill"></i> ベストアンサー
                                             </h6>
-                                            <p>トイレトレーニングは根気が必要です。成功したら褒めること、失敗しても叱らないことが重要です。</p>
+                                            <p>分解するのは危険です。黙って修理に出しましょう。</p>
                                         </div>
                                         <div class="question-meta">
                                             <div class="meta-item">
-                                                <i class="bi bi-person-circle"></i><span>ドッグトレーナー山田</span>
+                                                <i class="bi bi-person-circle"></i><span>Shiftキー熊谷</span>
                                             </div>
                                             <div class="meta-item">
-                                                <i class="bi bi-hand-thumbs-up"></i><span>312人が参考になった</span>
+                                                <i class="bi bi-hand-thumbs-up"></i><span>3125人が参考になった</span>
                                             </div>
                                         </div>
                                         <div class="mt-3">
@@ -401,24 +377,24 @@
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#faq2">
                                         <i class="bi bi-question-circle-fill text-primary me-2"></i>
-                                        猫が急にご飯を食べなくなりました
+                                        マウスのDPIがおかしい
                                     </button>
                                 </h2>
                                 <div id="faq2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                                     <div class="accordion-body">
                                         <div class="mb-3">
-                                            <span class="badge-category" style="background: #fb923c;">猫</span>
-                                            <span class="badge-category" style="background: #ef4444;">健康</span>
+                                            <span class="badge-category" style="background: #fb923c;">マウス</span>
+                                            <span class="badge-category" style="background: #ef4444;">パフォーマンス</span>
                                         </div>
                                         <div class="answer-highlight">
                                             <h6 class="fw-bold text-success mb-2">
                                                 <i class="bi bi-check-circle-fill"></i> ベストアンサー
                                             </h6>
-                                            <p>24時間以上食事を取らない場合は早めに動物病院を受診してください。</p>
+                                            <p>マウスのメーカーの専用アプリケーションの設定を確認してください。</p>
                                         </div>
                                         <div class="question-meta">
                                             <div class="meta-item">
-                                                <i class="bi bi-person-circle"></i><span>獣医師・佐藤</span>
+                                                <i class="bi bi-person-circle"></i><span>デバイスオタク・前田</span>
                                             </div>
                                             <div class="meta-item">
                                                 <i class="bi bi-hand-thumbs-up"></i><span>487人が参考になった</span>
@@ -451,22 +427,22 @@
                     <div class="ranking-item">
                         <div class="ranking-number gold">1</div>
                         <div>
-                            <h6 class="fw-bold mb-1 small">子犬のワクチン接種スケジュール</h6>
-                            <small class="text-muted">523人が参考にしました</small>
+                            <h6 class="fw-bold mb-1 small">画質とfpsの両立の仕方</h6>
+                            <small class="text-muted">52423人が参考にしました</small>
                         </div>
                     </div>
                     <div class="ranking-item">
                         <div class="ranking-number silver">2</div>
                         <div>
-                            <h6 class="fw-bold mb-1 small">猫の発情期の対処法</h6>
-                            <small class="text-muted">487人が参考にしました</small>
+                            <h6 class="fw-bold mb-1 small">キーボードの掃除方法</h6>
+                            <small class="text-muted">41827人が参考にしました</small>
                         </div>
                     </div>
                     <div class="ranking-item">
                         <div class="ranking-number bronze">3</div>
                         <div>
-                            <h6 class="fw-bold mb-1 small">ハムスターの寿命について</h6>
-                            <small class="text-muted">412人が参考にしました</small>
+                            <h6 class="fw-bold mb-1 small">アニメーション背景の設定方法</h6>
+                            <small class="text-muted">41412人が参考にしました</small>
                         </div>
                     </div>
                 </div>
@@ -479,21 +455,23 @@
             <div class="row">
                 <div class="col-md-4 mb-4">
                     <h5 class="fw-bold mb-3">
-                        <i class="bi bi-heart-fill text-danger"></i> PetLife
+                        <i class="bi bi-controller"></i> PlayEdge
                     </h5>
-                    <p>ペットとの幸せな暮らしを応援する情報サイト</p>
+                    <p>快適なプレイ環境をサポートする情報サイト</p>
                 </div>
                 <div class="col-md-2 mb-4">
                     <h6 class="fw-bold mb-3">サイト情報</h6>
                     <ul class="list-unstyled">
                         <li><a href="#" class="text-white text-decoration-none">About</a></li>
                         <li><a href="#" class="text-white text-decoration-none">利用規約</a></li>
+                        <li><a href="#" class="text-white text-decoration-none">プライバシー</a></li>
                     </ul>
                 </div>
                 <div class="col-md-2 mb-4">
                     <h6 class="fw-bold mb-3">サポート</h6>
                     <ul class="list-unstyled">
                         <li><a href="#" class="text-white text-decoration-none">ヘルプ</a></li>
+                        <li><a href="#" class="text-white text-decoration-none">お問い合わせ</a></li>
                         <li><a href="#" class="text-white text-decoration-none">FAQ</a></li>
                     </ul>
                 </div>
@@ -508,7 +486,7 @@
                 </div>
             </div>
             <hr class="border-light">
-            <p class="text-center mb-0">&copy; 2024 PetLife. All rights reserved.</p>
+            <p class="text-center mb-0">&copy; 2024 PlayEdge. All rights reserved.</p>
         </div>
     </footer>
 
